--- a/AndroidUIDemo/src/main/AndroidManifest.xml
+++ b/AndroidUIDemo/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.oreilly.demo.android.pa.uidemo"
+<manifest package="edu.luc.etl.cs313.android.group3Game"
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="1"
           android:versionName="1.0.0">
