--- a/Group3Game/src/main/AndroidManifest.xml
+++ b/Group3Game/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name">
         <activity
             android:name=".TouchMe"
+            android:screenOrientation="landscape"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
